# Advanced-RAG

./: .gitignore  README.md  main.py  pdf-vs-docx.html  pyproject.toml
Advanced_RAG/: .gitignore  Project_Architecture_Detailed.doc  Project_Architecture_Detailed.docx  README.md  docker-compose.yml  pyproject.toml
Advanced_RAG/.cursor/: mcp.json
Advanced_RAG/UI/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
Advanced_RAG/UI/src/: index.css
Advanced_RAG/UI/src/components/: CacheStatusBadge.tsx  ChatMessage.tsx  ChatWindow.tsx  ChunkStrategySelector.tsx  DebugFooter.tsx  DocumentList.tsx  FileUpload.tsx  FooterMetrics.tsx  RetrievalPanel.tsx  Sidebar.tsx  TopHeader.tsx
Advanced_RAG/UI/src/pages/: Dashboard.tsx
Advanced_RAG/UI/src/services/: api.ts
Advanced_RAG/UI/src/types/: api.ts
Advanced_RAG/data/: technical_article.txt  uploaded_documents.json
Advanced_RAG/scripts/: aws_rag_architecture.py  aws_rag_architecture_detailed.py
Advanced_RAG/src/: base.py  config.py  embedding.py  generation.py  ingestion.py  main.py  pipeline.py  reranking.py  retrieval.py
Advanced_RAG/src/cache/: __init__.py  base.py  embedding_cache.py  redis_backend.py
Advanced_RAG/src/chunking/: parent_child.py  sentence_window.py
advanced_methods/: README.md
advanced_methods/01_docling/: 01_basic_conversion.py  02_pdf_advanced.py  03_chunking.py  04_integrations.py  README.md
advanced_methods/02_unstructured_io/: 01_auto_partition.py  (+4 more)
unstructured_documents/: RAG_Data_Sources_Presentation.pptx  README.md  generate_presentation.py
(+81 files in other folders)
